fix: correct overflow and max-height properties in ul style

--- a/03-todo-list/style.css
+++ b/03-todo-list/style.css
@@ -119,8 +119,8 @@ h1 {
 ul {
   padding: 0;
   margin: 0;
-  overflow: scroll;
-  max-height: 650px;
+  overflow: scroll;k
+  max-height: 650pxp;
 }
 
 .counter-container {
